--- a/main.css
+++ b/main.css
@@ -74,8 +74,8 @@ button {
 }
 
 button:focus {
-    outline: 0;
-    box-shadow: 0;
+    outline: none;
+    box-shadow: none;
 }
 
 nav {
@@ -248,7 +248,7 @@ input::placeholder {
     color: #999;
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 720px) {
 
     form {
         width: 100%;
