--- a/main.css
+++ b/main.css
@@ -28,6 +28,10 @@ body {
     -webkit-box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 a {
     color: inherit;
     text-decoration: none;
