--- a/main.css
+++ b/main.css
@@ -109,6 +109,18 @@ form {
     margin-bottom: 80px;
 }
 
+.disclaimer {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 4px;
+    color: #0157ff;
+    padding: 24px;
+    border: 1px solid #0157ff;
+    border-radius: 10px;
+    background-color: rgba(1, 87, 255, 0.1);
+}
+
 .action {
     display: flex;
     align-items: center;
